<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/bg_radius_white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text_dialog_save_video_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/text_position_storage_video"
        android:textColor="@color/text_gray_1"
        android:textSize="17sp" />

    <View style="@style/Line" />

    <LinearLayout
        android:id="@+id/layout_select_memory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <ImageView
            android:id="@+id/icon_select_memory"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/radio_button_unselect" />

        <LinearLayout
            android:id="@+id/layout_select_sdcard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_memory_card"
                android:textColor="@color/text_gray_1"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/txt_memory_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray_1_half"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_select_sdcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp">

        <ImageView
            android:id="@+id/icon_select_sdcard"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/radio_button_select" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:id="@+id/layout_sdcard"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:text="@string/text_sd_card"
                    android:textColor="@color/text_gray_1"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/text_sd_card_note"
                    android:textColor="@color/text_gray_1_half"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_sdcard_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_sdcard"
                android:textColor="@color/text_gray_1_half"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txt_select_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/current_download_path"
        android:textColor="@color/text_gray_1_half"
        android:textSize="14sp" />


</LinearLayout>